testing second mobile section stretch bug fix

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -13,7 +13,8 @@
 #hero {
     display: flex;
     max-width: 100%;
-    height: 87vh;
+    height: calc(100vh - 5rem);
+    height: calc(100svh - 5rem);
     margin-bottom: 0;
     overflow: hidden;
 }
